objects/Informacoes_do_Produto__c.object
<CustomObject>
    <fields>
        <fullName>Agrupamento_ME_Codigo__c</fullName>
        <label>Agrupamento ME Código</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agrupamento_ME__c</fullName>
        <label>Agrupamento ME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classificacao__c</fullName>
        <label>Classificação</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descricao_SchedulerC__c</fullName>
        <label>Descrição Sch C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indice_litros__c</fullName>
        <label>Índice litros</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifica o SKU de referencia para utilização no pagamento.</description>
        <inlineHelpText>Informe o SKU que será utilizado como referência no momento do pagamento.</inlineHelpText>
        <label>SKU de referência</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Informações dos Produtos</relationshipLabel>
        <relationshipName>LAT_Informacoes_dos_Produtos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <label>Marca</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pontuacao_mix__c</fullName>
        <label>Pontuação mix</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Produto_Bonificado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifica se o produto aparecerá na lista para seleção na inclusão do Investimento Bonificação e Pagamentos, nos casos de contrato ON TRADE.</description>
        <inlineHelpText>Informe se este scheduleC pode ser bonificado.</inlineHelpText>
        <label>Produto Bonificado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SKU_de_referencia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifica o SKU de referencia para utilização no pagamento.</description>
        <inlineHelpText>Informe o SKU que será utilizado como referência no momento do pagamento.</inlineHelpText>
        <label>SKU de referência</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Informações dos Produtos</relationshipLabel>
        <relationshipName>Informacoes_dos_Produtos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduler_C__c</fullName>
        <label>Sch C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tx_Conversao__c</fullName>
        <label>Taxa de conversão</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Informações do Produto</label>
    <listViews>
        <fullName>Produtos_do_TESTE_net</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10</booleanFilter>
        <columns>NAME</columns>
        <columns>Produto_Bonificado__c</columns>
        <columns>Descricao_SchedulerC__c</columns>
        <columns>LAT_Product__c</columns>
        <columns>Tx_Conversao__c</columns>
        <columns>Categoria__c</columns>
        <columns>Classificacao__c</columns>
        <columns>Indice_litros__c</columns>
        <columns>Marca__c</columns>
        <columns>Pontuacao_mix__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Agrupamento_ME__c</columns>
        <columns>Agrupamento_ME_Codigo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>ABT</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>OR1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>BAF</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>CH8</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>HC3</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>JMS</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>MO2</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>MUE</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>WYE</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>AB1</value>
        </filters>
        <label>Produtos do TESTE NET SALES</label>
    </listViews>
    <listViews>
        <fullName>Todos</fullName>
        <columns>NAME</columns>
        <columns>Categoria__c</columns>
        <columns>Marca__c</columns>
        <columns>Scheduler_C__c</columns>
        <columns>Descricao_SchedulerC__c</columns>
        <columns>LAT_Product__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Nome da Informações do Produto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Informações dos Produtos</pluralLabel>
    <recordTypes>
        <fullName>Informacoes_do_Produto</fullName>
        <active>true</active>
        <label>Informações do Produto</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>